# I-can-read-ur-mind----Qt

./: .gitignore  BCI_Test.xsd  BCIs_TS_1_demo.xml  BCIs_TS_2_withAnswer.xml  BCIs_TS_3_new.xml  CMakeLists.txt  I-can-read-ur-mind.pro  I-can-read-ur-mind.pro.user.8142879  I-can-read-ur-mind.pro.user.ec0e3d2  Makefile  Makefile.Debug  Makefile.Release  README.md  res.qrc  states.scxml
BCI_TS_view----project/: BCI_TS_view----project.pro  main.cpp  mainwindow.cpp  mainwindow.h  testview.cpp  testview.h
TobiiPro.SDK.C_Binding.Windows_1.2.1.55_64/: ._include  ._lib
TobiiPro.SDK.C_Binding.Windows_1.2.1.55_64/include/: ._tobii_research.h  ._tobii_research_calibration.h  ._tobii_research_eyetracker.h  ._tobii_research_streams.h  tobii_research_calibration.h  tobii_research_streams.h
TobiiPro.SDK.C_Binding.Windows_1.2.1.55_64/lib/: ._tobii_research.lib  tobii_research.lib
build-I-can-read-ur-mind-Desktop_Qt_5_10_0_clang_64bit-Debug/: Makefile  moc_bci.cpp  moc_eye-tracker.cpp  moc_main-window.cpp  moc_menu.cpp  ui_main-window.h
build-I-can-read-ur-mind-Qt_5_10_0_for_UWP_64bit_MSVC_2017_NEW-Debug/: .qmake.winrt_uuid_I-can-read-ur-mind  Makefile  Makefile.Debug  Makefile.Release  object_script.I-can-read-ur-mind.Debug  object_script.I-can-read-ur-mind.Release
src/: I-can-read-ur-mind.pro  I-can-read-ur-mind.pro.user.498444d  I-can-read-ur-mind.pro.user.d973881  additional_header.h  additional_lib.cpp  controller.cpp  controller.h  main-window.cpp  main-window.h  main.cpp  model.cpp  model.h  models.scxml  view.cpp  view.h
src/BCIs/: bci.cpp  bci.h
src/view/: menu.h  (+11 more)
(+20 files in other folders)
